--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@toast-ui/react-editor": "^3.2.2",
     "axios": "^0.27.2",
     "cloudinary-react": "^1.8.1",
+    "dotenv": "^16.0.3",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
