--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "hoit",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.0",
+    "npm": "8.19.2"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
