--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
+    "@uiball/loaders": "^1.2.6",
     "axios": "^0.27.2",
     "cloudinary-react": "^1.8.1",
     "dotenv": "^16.0.3",
